# gabang-python

./: .editorconfig  .gitignore  CLAUDE.md  README.md  handoff.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  start.bat  vite.config.js
.github/workflows/: quality.yml
backend/: dev_server.py  requirements.lock.txt
backend/app/: board.py  cache.py  evaluation.py  game.py  main.py  minmax.py  redis_session_store.py  schemas.py  settings.py  shape.py  zobrist.py
backend/tests/: test_ai_benchmark.py  test_ai_quality_evaluation.py  test_ai_search.py  test_api_contract.py  test_board.py  test_ci_workflow.py  test_dev_server.py  test_frontend_skeleton.py  test_game_api.py  test_health.py  test_redis_session_store.py  test_runtime_hardening.py
docs/collaboration/: CLAUDE_REVIEW_PROMPT.md  TASKS.md  gabang-python-implementation-plan.md  任务计划.md
docs/collaboration/reviews/: 02-python-backend-skeleton.md  03-board-rules.md  04-ai-search.md  05-game-api.md  08-ledger-realignment.md  09-dev-scripts-docs.md  10-api-contract-docs.md  11-new-frontend-skeleton.md  12-new-frontend-game-api.md  13-runtime-hardening.md  14-frontend-acceptance-fixes.md  23A-collaboration-plan.md  23A-ledger-finalization.md  23B-plan-status-alignment.md  24A-ci-quality-gates.md  24B-ai-benefit-evaluation.md  24C-ai-cross-version-evaluation.md  B-01-ai-benchmark-baseline.md  B-02-immediate-win-tests.md  B-03-must-block-tests.md  B-07-move-ordering.md  (+33 more)
e2e/: gobang.spec.js
frontend/: app.js  index.html  styles.css
frontend/src/: App.vue  main.js  styles.css  theme.css
(+12 files in other folders)
