[project]
name = "gobang-python"
version = "0.1.0"
description = "FastAPI backend for the gobang AI migration."
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi==0.135.3",
  "uvicorn==0.38.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
